# eats-worm

./: .gitignore  .gitignore.txt  ExportFiles.lnk  LICENSE  MANIFEST.in  NP_example.py  README.md  example.py  example_20230518.py  example_20230608.py  example_20230716.py  example_20230915.py  example_20231010.py  example_20231129.py  example_Ray.py  example_SCAPE.py  noblob.py  noblob_play.py  pyproject.toml  run_npex.ipynb  setup.py
NWB/: create_NWB.ipynb
NWB/MultiChannelVol/: __init__.py
NWB/ndx_multichannel_volume/: __init__.py  ndx_multichannel_volume.py
NWB/spec/: ndx-multichannel-volume.extensions.yaml  (+1 more)
eats_worm/: Curator.py  Detection.py  Extractor.py  FilterSweeper.py  NWB_loader.py  PlotUtils.py  Threads.py  __init__.py  napari.yaml  reader.py  test_eats.ipynb  widget.py
eats_worm.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
evaluation/: run_eval.ipynb
examples/: NP_example.py  NWB_example.py  example.py  example_fcd.py
gcamp_extractor/: Curator.py  CuratorNapari.py  Extractor.py  ExtractorBFD.py  FilterSweeper.py  Threads.py  __init__.py  filter_experiment.py  gmm.py  gmm_experiment.py  moco.py  multifiletiff.py  segfunctions.py  simple_demo.py
image_processing/: histogram.py  process.ipynb
neuroPAL/: process.ipynb
npex/: alignment.py  blob.py  gui.py  npex.py  peaks.py
sandbox/: bfd_gce.py  moco_foray.ipynb  test_moco.py
tests/: temp.py  test.py  test_BlobThreadTracker_alpha.py  test_demo.py  test_display.py  test_extractor.py  test_extractor_outputs.py  test_registration.py
(+29 files in other folders)
